Fixed the clipping content problem

--- a/app/assets/stylesheets/pages/plants/_show.scss
+++ b/app/assets/stylesheets/pages/plants/_show.scss
@@ -5,6 +5,7 @@
   .plant-image-lg {
     position: absolute;
     top: 0;
+    left: 0;
   }
 }
 
@@ -38,6 +39,7 @@
   top: 0;
   right: 0;
   z-index: 1;
+  float: right;
 }
 
 .plant-content {
